--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
     "dev": "nodemon index.js",
     "test": "cross-env DB_ENV=testing jest --watchAll --verbose"
   },
-  "keywords": [],
+  "keywords": [
+    "thankful"
+  ],
   "author": "Evans Ibok",
   "license": "MIT",
   "devDependencies": {
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
     "supertest": "^4.0.2"
   },
   "dependencies": {
